--- a/Style/styleguide.css
+++ b/Style/styleguide.css
@@ -56,14 +56,6 @@ table {
 }
 
 
-
-button{
-
-	border: none;
-	outline: none;
-	cursor: pointer;
-}
-
 a{
   text-decoration: none;
 }
@@ -84,11 +76,6 @@ body{
 	background-color: #B28686;
 }
 
-ul li{
-
-	display: inline-block;
-	list-style: none;
-}
 
 .clearfix:after{
 
@@ -96,6 +83,12 @@ ul li{
 	display: block;
 	clear: both;
 }
+
+.space{
+    margin: 100px 0;
+}
+
+
 
 header{
 
@@ -116,7 +109,7 @@ header .header-container{
 
 .colors-section{
 
-	height: 400px;
+
 }
 
 
@@ -162,400 +155,55 @@ header .header-container{
 
 .colors-container .color7{
 
-		background-color: #3399cc;
-}
-
-.buttons-section{
-
-	height: 100px;
-}
-
-.button{
-
-  	width: 125px;
-  height: 29px;
-  display: block;
-  border-radius: 6px;
-  background-color: #2793c9;
-  color: #fff;
-  text-align: left;
-  padding-left: 15px;
-  box-shadow: 0px 1px 2px 0px rgba(62, 157, 194, 0.75);
-  line-height: 1.9;
-  margin: 15px 0;
+	background-color: #3399cc;
 }
 
 
-.arrow{
+/*----------------------------------main-section-components------------------------------------*/
 
-	width: 0;
-  border-left: 10px solid #fff;
-  border-top: 6px solid transparent;
-  border-bottom: 6px solid transparent;
-  border-radius: 2px;
-  float: right;
-  margin-top: 9px;
-  margin-right: 12px;
+.header-components{
+
 }
+
+/*----------------------------------main-section-components------------------------------------*/
+
+.main-section-components{
+
+
+}
+
 
 .colored-rec{
 
 	height: 250px;
 }
 
-.articles{
-    margin-top: 50px;
+
+/*----------------------------------solutions-components------------------------------------*/
+
+
+
+
+
+
+/*----------------------------------news-events-components------------------------------------*/
+
+.news-events-components{
+
+
 }
 
-.rectangle{
-
-    width: 280px;
-    height: 164px;
-	background-color: rgba(255, 51, 153, 0.9);
-	box-shadow: 0px 1px 4px 0px #a2a2a2;
-	border-radius: 6px;
-  	padding: 5px;
-    display: inline-block;
-}
-
-.articles li:nth-child(2),
-.articles li:nth-child(3){
-    margin-left: 13px;
-}
-
-.rec-sent{
-
-  	color: #fff;
-	font-size: 24px;
-	margin-top: 10px;
-  	margin-left: 15px;
-}
-
-.details{
-
-  	color: #fff;
-	font-weight: bold;
-  	margin-top: 60px;
-  	display: inline-block;
-  	margin-left: 15px;
-}
-
-.details:before{
-    
-    content: url("../assets/icons/Link2.png");
-    display: inline-block;
-    vertical-align: sub;
-    margin-right: 5px;
-    transform: scale(.8);
-    
-}
-
-/*----------------------------------blured rec section------------------------------------*/
-
-.blured-recs{
-
-	height: 200px;
-}
-
-.blured-title{
-  font-size: 32px;
-  padding-bottom: 10px;
-  color: #fff;
-}
-
-.blured-rec{
-  	border-radius: 2px;
-	background-color:  rgba(255, 255, 255, 0.4);
-	box-shadow: 0px 1px 4px 0px #a2a2a2;
-	width: 275px;
-	height: 119px;
-  	padding: 0 10px;
-}
-
-.blured-rec p {
-  	width: 188px;
-	float: right;
- 	margin-top: 10px;
-}	
-
-.rec-date{
-  	width: 69px;
-	height: 99px;
-	background-color: #3399cc;
-	float: left;
-  	margin-top: 10px;
-}
-
-.rec-date .day{
-
-	color: #fff;
-	font-size: 48px;
-	font-weight: 400;
-	text-align: center;
-	margin-top: 5px;
-	border-bottom: 1px dotted #fff;
-  	display: block;
-}
-
-.rec-date .month{
-
-	color:  #fff;
-	font-size: 18px;
-	font-weight: 400;
-	text-align: center;
-	margin-top: 5px;
-  	display: block;
-}
-
-.blured-container a{
-  color: #fff;
-  text-decoration: none;
-  display: inline-block;
-  padding-top: 10px;
-}
-
-.blured-container a .icons:nth-of-type(1){
-  background: url("../assets/icons/calendar-icon.png") no-repeat;
-    display: inline-block;
-    width: 15px;
-    height: 22px;
-    margin-right: 7px;
-}
-
-/*---------------------------------------stories section-----------------------------------*/
-
-.stories-box{
-
-	width: 323px;
-	height: 291px;
-  
-}
-
-.representives{
-
-	height: 155px;
-	background-color: #fff;
-	padding: 12px;
-}
-
-.representives > img{
-
-	width: 73px;
-	height: 85px;
-	float: left;
-	margin-bottom: 15px;
-	margin-top: 5px;
-}
-
-.representives > q{
-
-	font-size: 20px;
-	margin-left: 90px;
-	display: block;
-	width: 192px;
-	margin-top: 5px;
-}
-
-.representives > q:before{
-
-	content: url("../images/icons/Quote_2.png");
-	display: inline-block;
-	margin-right: 8px;
-}
-
-.representives footer{
-
-	clear: both;
-	border-top: 1px solid #000;
-	padding-top: 10px;
-}
-
-.representives footer h5{
-
-	display: inline;
-}
-
-.representives footer img{
-
-	width: 50px;
-	height: 26px;
-	float: right;
-	margin-top: -10px;
-}
-
-.rep-logo{
-
-	margin-top: 5.5px;
-	margin-left: 3.5px;
-	background-color: #fff;
-	display: inline-block;
-	list-style: none;
-	padding: 12px;
-}
-
-.rep-logo:first-of-type{
-
-	margin-left: 0;
-}
-
-.stories-logo{
-
-	width: 78.5px;
-	height: 65px;
-}
-
-.nav-bar{
-
-	background-color: #fff;
-	width: 420px;
-}
-
-.nav-bar ul li{
-
-	display: inline-block;
-	border-left: 1px solid #000;
-}
-
-.nav-bar ul li:first-child{
-  
-  border-left: none;
-}
-
-.nav-bar ul li a{
-  
-  padding: 0 10px;
-  color: #000;
-}
-
-/*-----------------------------blog section--------------------------------*/
-
-.blog-posts{
-  width: 244px;
-  height: 280px;
-  background-color: rgba(225, 225, 225, 0.28);
-  padding: 15px;
-}
+/*---------------------------------------stories-components-----------------------------------*/
 
 
-.Posts-component{
+
+
+
+/*-----------------------------footer-components--------------------------------*/
+
+
+.footer-components{
 	padding: 50px;
-	height: 400px;
 	background-color: #000;
 }
 
-.posts{
-
-  border-bottom: 1px solid #6a6a6a;
-}
-
-.posts h4, .subscribe h4{
-  margin-top: 15px;
-  color: #4ea7d3;
-  font-weight: bold;
-  font-size: 17px;
-  text-align: center;
-}
-
-.post-date{
-  
-  width: 79px;
-	height: 90px;
-	float: left;
-  margin-top: 10px;
-}
-
-.posts:after{
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.post-date span{
-  color: #fff;
-	font-weight: 400;
-	text-align: center;
-	margin-top: 3px;
-  display: block;
-}
-
-.post-day{
-	font-size: 45px;
-}
-
-.post-month{
-	font-size: 25px;
-}
-
-.posts p{
- 	margin-top: 18px;
-  font-size: 18px;
-  font-weight: 400;
-  color: #fff;
-}
-
-.email-form{
-display: inline-block;
-margin-top: 10px;
-}
-
-.email-form input{
-  
-  margin-top: 10px;
-  padding: 6px;
-  border: hidden;
-  border-radius: 2px;
-  outline: none;
-
-}
-
-
-.email-form input:nth-of-type(2){
-  margin-left: -10px;
-  border-width: 1px;
-  cursor: pointer;
-  color: #fff;
-  background: -webkit-linear-gradient(90deg, #2991c5 0%, #46b5ec 100%);
-  background: -moz-linear-gradient(90deg, #2991c5 0%, #46b5ec 100%);
-  background: -o-linear-gradient(90deg, #2991c5 0%, #46b5ec 100%);
-  background: -ms-linear-gradient(90deg, #2991c5 0%, #46b5ec 100%);
-  background: linear-gradient(0deg, #2991c5 0%, #46b5ec 100%);
-  box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.28);
-  
-}
-
-ul.social-networks{
-
-	margin-top: 40px;
-}
-
-ul.social-networks li{
-
-	display: inline-block;
-	width: 24px;
-	height: 24px;
-}
-
-ul.social-networks li:nth-child(1){
-
-	background: url("../assets/icons/YouTube_3.png") no-repeat;
-}
-
-ul.social-networks li:nth-child(2){
-
-	background: url("../assets/icons/Twitter.png") no-repeat;
-}
-
-ul.social-networks li:nth-child(3){
-
-	background: url("../assets/icons/LinkedIn.png") no-repeat;
-}
-
-/*---------------------------solutions section-------------------------------*/
-
-ul li:nth-child(1) div{
-    background: url("../assets/icons/Robot.png") no-repeat;
-    width: 100px;
-    height: 80px;    
-    background-size: 94px 77px;
-    background-position: 7px 0px;
-}
